<resources>
    <string name="app_name">GitHubUsers</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="search">Cari</string>
    <string name="namaUser">Nama User</string>
    <string name="username">Username</string>
    <string name="follow">999</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Theme Setting</string>
    <string name="splash">Go Github !</string>
</resources>