<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_profile"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_nama_user"
                android:text="@string/namaUser"
                android:layout_gravity="center"
                android:padding="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_username"
                android:text="@string/username"
                android:textStyle="italic"
                android:layout_gravity="center"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_followers_number"
                        android:text="@string/follow"
                        android:layout_column="1"
                        android:layout_marginEnd="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_followers"
                        android:text="@string/followers"
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_height="0dp"
                        android:layout_width="10dp"/>

                    <TextView
                        android:id="@+id/tv_following_number"
                        android:text="@string/follow"
                        android:layout_marginEnd="5dp"
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_following"
                        android:text="@string/following"
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </TableRow>
            </TableLayout>

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_detail"
                app:tabTextColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:layout_gravity="bottom|right"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>